--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -11,6 +11,12 @@
     <noscript>
       <strong>We're sorry but final-vue-capstone-seed doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+<script type="text/javascript">
+(function() {
+emailjs.init("user_mGcL0LdrwUOOtseA6Bbfe");
+})();
+</script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
